deploy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy-service
  labels:
    app: envoy-proxy
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 19001
    protocol: TCP
    name: http
  - port: 9901
    targetPort: 9901
    protocol: TCP
    name: admin
  selector:
    app: envoy-proxy
